multiple network support (#525)
* support different networks

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* get network name from api

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* improve and fix error handling

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* changes due to update

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* keep using 0.4.0

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* nits

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* lint

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* keep using 0.4.0

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* readme and fixes

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* typo

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
       - powergate-lotus:/root/lotus
   
   lotus:
-    image: textile/lotus:v0.4.0
+    image: textile/lotus:${LOTUS_IMAGE_TAG}
     volumes:
       - powergate-lotus:/data
     environment:
