Stage folders support (#559)
* pow add folder support

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fixes

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update docs

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update readme

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* add authentication, lints

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* retrieve folders and update docs

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix flag name

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* better msg errors

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* move logic to ffs client

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* remove extra stop

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/docker-compose-localnet.yaml
+++ b/docker/docker-compose-localnet.yaml
@@ -9,6 +9,7 @@ services:
       - 6060:6060
       - 5002:5002
       - 6002:6002
+      - 6003:6003
     depends_on:
       - ipfs
       - lotus
@@ -16,6 +17,7 @@ services:
       - POWD_DEVNET=true
       - POWD_LOTUSHOST=/dns4/lotus/tcp/7777
       - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
+      - POWD_IPFSREVPROXYADDR=0.0.0.0:6003
     restart: unless-stopped
 
   ipfs:
