Support new Lotus API + calibration network (#529)
* rebase

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* print msg when trying using testnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update to next branch

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* rebase

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* decrease load

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* separate wallet tests

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* enable parallel in subtest

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update deps and enable t.parallel

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* more parallel

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* try flaky stragety

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix flakyness on general test

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* improve test deflakyness

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fixes

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* more improvements

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix retry message

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* reorg

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* faster devnet

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* slow down

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* move flaky to own file

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* fix all

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* update to 8.8.0

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* support calibration network

Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

* calib changes and localnet speed

Signed-off-by: Ignacio Hagopian <js

--- a/docker/docker-compose-localnet.yaml
+++ b/docker/docker-compose-localnet.yaml
@@ -23,10 +23,10 @@ services:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:v0.4.0
+    image: textile/lotus-devnet:ntwk-calibration-8.8.0
     ports:
       - 7777:7777
     environment:
-      - TEXLOTUSDEVNET_SPEED=1500
+      - TEXLOTUSDEVNET_SPEED=500
       - TEXLOTUSDEVNET_BIGSECTORS=${BIGSECTORS}
       - TEXLOTUSDEVNET_IPFSADDR=/dns4/ipfs/tcp/5001
