--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,19 +1,10 @@
+COMPAT_MSG="The current version of Powergate support newer versions than Testnet network. You might be interested in using the Calibration network (make calibration-up)"
+
 down:
-	LOTUS_IMAGE_TAG=v0.4.1 \
-	docker-compose \
-		-f docker-compose.yaml \
-		-f ipfs-image.yaml \
-		-f powergate-build-context.yaml \
-		down
+	@echo ${COMPAT_MSG}
 .PHONY: down
 
 up: down
-	LOTUS_IMAGE_TAG=v0.4.1 \
-	docker-compose \
-		-f docker-compose.yaml \
-		-f ipfs-image.yaml \
-		-f powergate-build-context.yaml \
-		up --build 
 .PHONY: up
 
 
@@ -34,22 +25,22 @@ localnet:
 .PHONY: localnet
 
 
-nerpa-up: nerpa-down
-	LOTUS_IMAGE_TAG=nerpa-ntwk-nerpa-7.7.0 \
+calibration-up: calibration-down
+	LOTUS_IMAGE_TAG=ntwk-calibration-8.8.0 \
 	docker-compose \
-		-p nerpa \
+		-p calib \
 		-f docker-compose.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
 		up --build 
-.PHONY: nerpa-up
+.PHONY: calibration-up
 
-nerpa-down:
-	LOTUS_IMAGE_TAG=nerpa-ntwk-nerpa-7.7.0 \
+calibration-down:
+	LOTUS_IMAGE_TAG=ntwk-calibration-8.8.0 \
 	docker-compose \
-		-p nerpa \
+		-p calib \
 		-f docker-compose.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
 		down
-.PHONY: nerpa-down
+.PHONY: calibration-down
