--- a/docker/docker-compose-localnet.yaml
+++ b/docker/docker-compose-localnet.yaml
@@ -23,7 +23,7 @@ services:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:ntwk-calibration-8.13.0-1
+    image: textile/lotus-devnet:ntwk-calibration-8.13.1.f0942
     ports:
       - 7777:7777
     environment:
