--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,4 +1,4 @@
-COMPAT_MSG="The current version of Powergate support newer versions than Testnet network. You might be interested in using the Calibration network (make calibration-up)"
+COMPAT_MSG="The current version of Powergate support newer versions than Testnet network. You might be interested in using the Calibration network (make calibration-up) or Nerpa network (make nerpa-up)."
 
 down:
 	@echo ${COMPAT_MSG}
@@ -44,3 +44,24 @@ calibration-down:
 		-f powergate-build-context.yaml \
 		down
 .PHONY: calibration-down
+
+
+nerpa-up: nerpa-down
+	LOTUS_IMAGE_TAG=nerpa-53c7594 \
+	docker-compose \
+		-p nerpa \
+		-f docker-compose.yaml \
+		-f ipfs-image.yaml \
+		-f powergate-build-context.yaml \
+		up --build 
+.PHONY: nerpa-up
+
+nerpa-down:
+	LOTUS_IMAGE_TAG=nerpa-53c7594 \
+	docker-compose \
+		-p nerpa \
+		-f docker-compose.yaml \
+		-f ipfs-image.yaml \
+		-f powergate-build-context.yaml \
+		down
+.PHONY: nerpa-down
