manage buf with bingo, consolidate makefiles
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/checkout@v1
       - name: make local
         if: success()
-        run: make -f Makefile.buf local
+        run: make buf-local
