--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -1,4 +1,4 @@
-# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.2.2. DO NOT EDIT.
+# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.2.3. DO NOT EDIT.
 # All tools are designed to be build inside $GOBIN.
 # Those variables will work only until 'bingo get' was invoked, or if tools were installed via Makefile's Variables.mk.
 local gobin=$(go env GOBIN)
@@ -8,7 +8,13 @@ if [ -z "$gobin" ]; then
 fi
 
 
+BUF="${gobin}/buf-v0.20.5"
+
 GOVVV="${gobin}/govvv-v0.3.0"
 
 GOX="${gobin}/gox-v1.0.1"
+
+PROTOC_GEN_BUF_CHECK_BREAKING="${gobin}/protoc-gen-buf-check-breaking-v0.20.5"
+
+PROTOC_GEN_BUF_CHECK_LINT="${gobin}/protoc-gen-buf-check-lint-v0.20.5"
 
