--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,13 +1,3 @@
-COMPAT_MSG="The current version of Powergate support newer versions than Testnet network. You might be interested in using the Calibration network (make calibration-up) or Nerpa network (make nerpa-up)."
-
-down:
-	@echo ${COMPAT_MSG}
-.PHONY: down
-
-up: down
-.PHONY: up
-
-
 localnet-down:
 	docker-compose -p localnet \
 		-f docker-compose-localnet.yaml \
@@ -25,29 +15,28 @@ localnet:
 .PHONY: localnet
 
 
-calibration-up: calibration-down
-	LOTUS_IMAGE_TAG=ntwk-calibration-8.13.1-f094273f \
+up: down
+	LOTUS_IMAGE_TAG=testnet-v0.5.3 \
 	docker-compose \
-		-p calib \
+		-p testnet \
 		-f docker-compose.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
 		up --build 
-.PHONY: calibration-up
+.PHONY: up
 
-calibration-down:
-	LOTUS_IMAGE_TAG=ntwk-calibration-8.13.1-f094273f \
+down:
+	LOTUS_IMAGE_TAG=testnet-v0.5.3 \
 	docker-compose \
-		-p calib \
+		-p testnet \
 		-f docker-compose.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
 		down
-.PHONY: calibration-down
-
+.PHONY: down
 
 nerpa-up: nerpa-down
-	LOTUS_IMAGE_TAG=nerpa-53c7594 \
+	LOTUS_IMAGE_TAG=nerpa-ntwk-nerpa-8.28.0 \
 	docker-compose \
 		-p nerpa \
 		-f docker-compose.yaml \
@@ -57,7 +46,7 @@ nerpa-up: nerpa-down
 .PHONY: nerpa-up
 
 nerpa-down:
-	LOTUS_IMAGE_TAG=nerpa-53c7594 \
+	LOTUS_IMAGE_TAG=nerpa-ntwk-nerpa-8.28.0 \
 	docker-compose \
 		-p nerpa \
 		-f docker-compose.yaml \
