Use make for build release work, streamline release
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -10,6 +10,8 @@ fi
 
 BUF="${gobin}/buf-v0.20.5"
 
+GOMPLATE="${gobin}/gomplate-v3.8.0"
+
 GOVVV="${gobin}/govvv-v0.3.0"
 
 GOX="${gobin}/gox-v1.0.1"
