publish docker on release publish
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,10 @@
 name: Docker Image
 on:
-  create:
+  release:
+    types: [published]
   push:
     branches:
-        - master
+      - master
 jobs:
   docker:
     name: Docker publishing
