switch testnet to mainnet
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -18,7 +18,7 @@ localnet:
 up: down
 	LOTUS_IMAGE_TAG=v0.10.2 \
 	docker-compose \
-		-p testnet \
+		-p mainnet \
 		-f docker-compose.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
@@ -28,7 +28,7 @@ up: down
 down:
 	LOTUS_IMAGE_TAG=v0.10.2 \
 	docker-compose \
-		-p testnet \
+		-p mainnet \
 		-f docker-compose.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
