check out code before publishing docker image
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,8 @@ jobs:
     name: Docker publishing
     runs-on: self-hosted
     steps:
+      - name: Check out code
+        uses: actions/checkout@v1
       - name: Publish
         uses: docker/build-push-action@v1
         with:
