attempt python bindings fix
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,7 +125,7 @@ jobs:
           replace-with: ""
       - name: Generate Python gRPC bindings
         run: |
-          ./scripts/gen-py-protos.sh  ${{steps.makeversion.outputs.replaced}} . ./py-grpc
+          ./scripts/gen-py-protos.sh ${{steps.makeversion.outputs.replaced}} ./proto ./py-grpc
       - name: Publish Python gRPC bindings
         env:
           TWINE_USERNAME: __token__
