--- a/docker/docker-compose-localnet.yaml
+++ b/docker/docker-compose-localnet.yaml
@@ -23,7 +23,7 @@ services:
       - 5001:5001
 
   lotus:
-    image: textile/lotus-devnet:sha-75a06ed
+    image: textile/lotus-devnet:v1.1.3
     ports:
       - 7777:7777
     environment:
