--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # Test binary, built with `go test -c`
 *.test
+cover.out
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
