--- a/.github/workflows/ensure-docs.yml
+++ b/.github/workflows/ensure-docs.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - master
+      - develop
   pull_request:
     branches:
       - master
+      - develop
 jobs:
   ensure-pow-docs:
     name: pow
