--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 
 updates:
-  - package_ecosystem: "gomod"
+  - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: "monthly"
