update other references to lotus host addr
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/docker/docker-compose-localnet.yaml
+++ b/docker/docker-compose-localnet.yaml
@@ -14,7 +14,7 @@ services:
       - lotus
     environment:
       - POWD_DEVNET=true
-      - POWD_LOTUSHOST=/dns4/lotus/tcp/7777
+      - POWD_LOTUSHOST=lotus:7777
       - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
     restart: unless-stopped
 
