adding DOCKER_BUILDKIT=1 to Makefile
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,4 +1,5 @@
 localnet-down:
+	DOCKER_BUILDKIT=1 \
 	docker-compose -p localnet \
 		-f docker-compose-localnet.yaml \
 		-f ipfs-image.yaml \
@@ -7,7 +8,9 @@ localnet-down:
 .PHONY: localnet-down
 
 localnet: 
-	BIGSECTORS=true docker-compose -p localnet \
+	DOCKER_BUILDKIT=1 \
+	BIGSECTORS=true \
+	docker-compose -p localnet \
 		-f docker-compose-localnet.yaml \
 		-f ipfs-image.yaml \
 		-f powergate-build-context.yaml \
@@ -16,6 +19,7 @@ localnet:
 
 
 up: down
+	DOCKER_BUILDKIT=1 \
 	LOTUS_IMAGE_TAG=v1.5.2 \
 	docker-compose \
 		-p mainnet \
@@ -26,6 +30,7 @@ up: down
 .PHONY: up
 
 down:
+	DOCKER_BUILDKIT=1 \
 	LOTUS_IMAGE_TAG=v1.5.2 \
 	docker-compose \
 		-p mainnet \
@@ -37,6 +42,7 @@ down:
 
 
 up-calibration: down-calibration
+	DOCKER_BUILDKIT=1 \
 	LOTUS_IMAGE_TAG=ntwk-calibration-d6c42 \
 	docker-compose \
 		-p calibration \
@@ -47,6 +53,7 @@ up-calibration: down-calibration
 .PHONY: up-calibration
 
 down-calibration:
+	DOCKER_BUILDKIT=1 \
 	LOTUS_IMAGE_TAG=ntwk-calibration-d6c42 \
 	docker-compose \
 		-p calibration \
