--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,6 +7,7 @@ on:
       - master
 jobs:
   docker:
+    name: Docker publishing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
