update bingo and buf, gen protos
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -1,26 +1,28 @@
-# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.2.3. DO NOT EDIT.
+# Auto generated binary variables helper managed by https://github.com/bwplotka/bingo v0.5.1. DO NOT EDIT.
 # All tools are designed to be build inside $GOBIN.
 # Those variables will work only until 'bingo get' was invoked, or if tools were installed via Makefile's Variables.mk.
-local gobin=$(go env GOBIN)
+GOBIN=${GOBIN:=$(go env GOBIN)}
 
-if [ -z "$gobin" ]; then
-	gobin="$(go env GOPATH)/bin"
+if [ -z "$GOBIN" ]; then
+	GOBIN="$(go env GOPATH)/bin"
 fi
 
 
-BUF="${gobin}/buf-v0.30.0"
+BINGO="${GOBIN}/bingo-v0.5.1"
 
-GOMPLATE="${gobin}/gomplate-v3.8.0"
+BUF="${GOBIN}/buf-v0.46.0"
 
-GOVVV="${gobin}/govvv-v0.3.0"
+GOMPLATE="${GOBIN}/gomplate-v3.8.0"
 
-GOX="${gobin}/gox-v1.0.1"
+GOVVV="${GOBIN}/govvv-v0.3.0"
 
-PROTOC_GEN_BUF_CHECK_BREAKING="${gobin}/protoc-gen-buf-check-breaking-v0.20.5"
+GOX="${GOBIN}/gox-v1.0.1"
 
-PROTOC_GEN_BUF_CHECK_LINT="${gobin}/protoc-gen-buf-check-lint-v0.20.5"
+PROTOC_GEN_BUF_BREAKING="${GOBIN}/protoc-gen-buf-breaking-v0.46.0"
 
-PROTOC_GEN_GO_GRPC="${gobin}/protoc-gen-go-grpc-v1.0.1"
+PROTOC_GEN_BUF_LINT="${GOBIN}/protoc-gen-buf-lint-v0.46.0"
 
-PROTOC_GEN_GO="${gobin}/protoc-gen-go-v1.25.0"
+PROTOC_GEN_GO_GRPC="${GOBIN}/protoc-gen-go-grpc-v1.0.1"
+
+PROTOC_GEN_GO="${GOBIN}/protoc-gen-go-v1.25.0"
 
