--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -10,6 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.16
       - name: checkout
         if: success()
         uses: actions/checkout@v1
