--- a/.github/workflows/ensure-docs.yml
+++ b/.github/workflows/ensure-docs.yml
@@ -11,6 +11,10 @@ jobs:
     name: pow
     runs-on: ubuntu-latest
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+           go-version: 1.17.x
       - name: check out code
         uses: actions/checkout@v1
       - name: generate docs
