--- a/docker/docker-compose-localnet.yaml
+++ b/docker/docker-compose-localnet.yaml
@@ -8,7 +8,7 @@ services:
       - 6060:6060
       - 5002:5002
       - 6002:6002
-      - 7000:7000
+      - 7001:7001
     depends_on:
       - ipfs
       - lotus
@@ -16,6 +16,7 @@ services:
       - POWD_DEVNET=true
       - POWD_LOTUSHOST=/dns4/lotus/tcp/7777
       - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
+      - POW_GATEWAYHOSTADDR=0.0.0.0:7001
     restart: unless-stopped
 
   ipfs:
