--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - 6060:6060
       - 5002:5002
       - 6002:6002
-      - 7000:7000
+      - 7001:7001
     depends_on:
       - ipfs
       - lotus
@@ -23,6 +23,7 @@ services:
       - POWD_IPFSAPIADDR=/dns4/ipfs/tcp/5001
       - POWD_LOTUSTOKENFILE=/root/lotus/.lotus/token
       - POWD_REPOPATH=/root/powergate/.powergate
+      - POW_GATEWAYHOSTADDR=0.0.0.0:7001
     restart: unless-stopped
     volumes:
       - powergate-powd:/root/powergate
